<resources>
    <string name="app_name">MineMap</string>
    <string name="title_activity_map">MineMap</string>
    <string name="title_activity_register">Register</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_in">Sign-In</string>

    <string name="err_msg_name">Enter your name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="err_msg_confirm">Incorrect password</string>

    <string name="btn_register">Register</string>
    <string name="hint_confirm">Confirm</string>
    <string name="hint_name">Name</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="map_type">Change map type</string>
    <string name="btn_save">Save</string>
    <string name="location_description">Add Description</string>
    <string name="hint_date">Date</string>
    <string name="hint_tel">Phone</string>
    <string name="hint_des">Description</string>
    <string name="next">Next</string>
    <string name="logout">Logout</string>
    <string name="type">Type</string>
    <string name="btn_ok">OK</string>
    <string name="reload">Reload</string>
    <string name="string_choose_file">Choose Image</string>
    <string name="string_upload_image">Upload Image</string>
    <string name="string_view_image">Show Image</string>
    <string name="select_marker_please">Please select marker</string>
    <string name="select_filter_please">Please select filter</string>
    <string name="date">Date added</string>

    <string name="close">Close:  </string>
    <string name="close2">Close </string>
    <string name="open">Open:  </string>
    <string name="open2">Open </string>
    <string name="hint_open">08:00</string>
    <string name="hint_close">18:00</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">MineMap</string>
    <string name="slide_1_desc">Welcome to MineMap.</string>

    <string name="slide_2_title">Login</string>
    <string name="slide_2_desc">Register to create your own account.</string>

    <string name="slide_3_title">Main Page</string>
    <string name="slide_3_desc">This map is yours.</string>

    <string name="slide_4_title">Add it!</string>
    <string name="slide_4_desc">Make your own map.</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="edit_btn">Edit</string>
    <string name="del_btn">Delete</string>
    <string name="edit_page">Edit</string>
    <string name="delete_location">Are you sure to delete this location?</string>
    <string name="yes_btn">YES</string>
    <string name="no_btn">NO</string>
    <string name="edit_description">Edit Description</string>
</resources>
