<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_reload"
        android:title="@string/reload"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_filter"
        android:title="@string/filter"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_search"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_map_type"
        android:title="@string/map_type"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_logout"
        android:title="@string/logout"
        app:showAsAction="never" />

</menu>