<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/gray"
    tools:context="com.augmentis.ayp.minemap.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/colorControlActivated" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:paddingRight="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="6"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/imageButton3"
                        android:layout_width="40dp"
                        android:layout_height="45dp"
                        android:layout_marginBottom="5dp"
                        android:background="@color/gray"
                        app:srcCompat="@drawable/ic_assignment_black_24dp" />


                    <ImageButton
                        android:id="@+id/imageButton5"
                        android:layout_width="40dp"
                        android:layout_height="45dp"
                        app:srcCompat="@drawable/ic_tablet_mac_black_24dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edit_name"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginBottom="5dp"
                        android:background="@color/white_gray"
                        android:hint="@string/hint_name"
                        android:paddingLeft="10dp"
                        android:textSize="15sp"
                        android:theme="@style/MyEditTextTheme" />


                    <EditText
                        android:id="@+id/edit_tel"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginBottom="15dp"
                        android:background="@color/white_gray"
                        android:hint="@string/hint_tel"
                        android:paddingLeft="10dp"
                        android:textSize="15sp"
                        android:theme="@style/MyEditTextTheme" />


                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="13dp"
                    android:layout_marginEnd="18dp"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/imageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/gray"
                        app:srcCompat="@drawable/ic_alarm_on_black_24dp" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:text="@string/open2"
                        android:textAlignment="center"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/edit_open"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_weight="1"
                        android:background="@color/white_gray"
                        android:hint="@string/hint_open"
                        android:inputType="time"
                        android:padding="5dp"
                        android:textAlignment="center"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:text="@string/close2"
                        android:textAlignment="center"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/edit_close"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_weight="1"
                        android:background="@color/white_gray"
                        android:hint="@string/hint_close"
                        android:inputType="time"
                        android:padding="5dp"
                        android:textAlignment="center"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="vertical"
                android:paddingLeft="25dp"
                android:paddingRight="25dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_des"
                    android:textSize="25sp" />

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/colorControlActivated" />

                <EditText
                    android:id="@+id/edit_description"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/white_gray"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:padding="5dp"
                    android:textSize="15sp"
                    android:theme="@style/MyEditTextTheme" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_weight="105.90"
                android:gravity="center|bottom"
                android:orientation="vertical"
                android:paddingLeft="25dp"
                android:paddingRight="25dp">

                <Button
                    android:id="@+id/btn_del"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/del_btn"
                    android:text="@string/del_btn"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_save_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/colorControlActivated"
                    android:text="@string/btn_save"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>