<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context="com.augmentis.ayp.minemap.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="45dp"
                    android:background="@color/white_gray"
                    app:srcCompat="@mipmap/ic_nam"
                    android:id="@+id/imageButton3" />

                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="45dp"
                    app:srcCompat="@mipmap/ic_date"
                    android:id="@+id/imageButton4" />

                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="45dp"
                    app:srcCompat="@mipmap/ic_tel"
                    android:id="@+id/imageButton5" />

            </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                        <EditText
                            android:id="@+id/input_name"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:background="@color/white_gray"
                            android:hint="@string/hint_name"
                            android:inputType="textEmailAddress"
                            android:textSize="15sp"
                            android:layout_marginBottom="5dp"
                            android:theme="@style/MyEditTextTheme" />

                        <EditText
                            android:id="@+id/input_date"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:background="@color/white_gray"
                            android:hint="@string/hint_date"
                            android:inputType="textEmailAddress"
                            android:textSize="15sp"
                            android:layout_marginBottom="5dp"
                            android:theme="@style/MyEditTextTheme" />

                        <EditText
                            android:id="@+id/input_tel"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:background="@color/white_gray"
                            android:hint="@string/hint_tel"
                            android:inputType="textEmailAddress"
                            android:textSize="15sp"
                            android:layout_marginBottom="15dp"
                            android:theme="@style/MyEditTextTheme" />


                </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_des"
                android:textSize="25sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorControlActivated"
                android:layout_marginBottom="20dp"
                android:id="@+id/view" />

            <EditText
                android:id="@+id/input_des"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:inputType="textMultiLine"
                android:textSize="40sp"
                android:background="@color/white_gray"
                android:theme="@style/MyEditTextTheme" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="20dp">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            android:background="@color/gray"
                            android:paddingLeft="30dp" />

                        <ImageButton
                            android:layout_width="70dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="30dp"
                            app:srcCompat="@android:drawable/ic_menu_camera"
                            android:id="@+id/imageButton"
                            android:background="@color/white_gray"
                            android:layout_gravity="center_vertical|center"
                            android:layout_weight="1" />


                    </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="101dp"
            android:gravity="center|bottom"
            android:orientation="vertical"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginBottom="30dp"
                android:background="@color/colorControlActivated"
                android:text="@string/btn_save"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </LinearLayout>

    </ScrollView>
</RelativeLayout>